# treeland-fix

./: CMakeLists.txt
debian/: control  rules  treeland.install
examples/: CMakeLists.txt
examples/test_toplevel_tag/: main.cpp
examples/test_virtual_output/: main.cpp
misc/dconfig/: CMakeLists.txt  org.deepin.dde.treeland.json  org.deepin.dde.treeland.output.json  org.deepin.dde.treeland.seat.json  org.deepin.dde.treeland.user.json
misc/shaders/: liquidglass.frag
misc/systemd/dde-session-pre.target.wants/: treeland-sd.service.in
qwlroots/: CMakeLists.txt
qwlroots/src/: CMakeLists.txt
qwlroots/src/render/: qwdmabuf.h  qwrenderer.h  qwtexture.h
qwlroots/src/types/: qwinputdevice.h  qwlinuxdmabufv1.h
scripts/: pre-commit.sh
src/: CMakeLists.txt  main.cpp  systemd-socket.cpp
src/common/: xcbutils.cpp  xcbutils.h
src/core/: imcandidatepanelmanager.cpp  layersurfacecontainer.cpp  popupsurfacecontainer.cpp  rootsurfacecontainer.cpp  shellhandler.cpp  shellhandler.h  treeland.cpp
src/core/qml/: Border.qml  PrimaryOutput.qml  SurfaceContent.qml  TaskSwitcher.qml  TitleBar.qml  TitleBarPalette.qml  WindowMenu.qml  XdgShadow.qml
src/effects/: tsgradiusimagenode.cpp  tsgradiusimagenode.h
src/greeter/: ddmremote.rep  greeterddmremote.rep  greeterproxy.cpp  greeterproxy.h  usermodel.cpp
src/input/: inputmanager.cpp  inputmanager.h
src/modules/capture/: capture.cpp
src/modules/ddm/: CMakeLists.txt  ddminterfacev1.cpp  ddminterfacev1.h  ddmremoteobjectv1.cpp  ddmremoteobjectv1.h  treelandddmremote.rep  treelandremote.rep
src/output/: output.cpp  outputlifecyclemanager.cpp  outputmanager.cpp  outputmanager.h
src/seat/: helper.cpp  helper.h  seatsmanager.cpp
src/session/: session.cpp
src/surface/: seatsurfacemanager.cpp  surfacecontainer.cpp  surfacefilterproxymodel.cpp  surfaceproxy.cpp  surfaceproxy.h  surfacewrapper.cpp  surfacewrapper.h
src/treeland-shortcut/: shortcut.cpp
src/utils/: fpsdisplaymanager.cpp  processenvironment.cpp  processenvironment.h
src/wallpaper/: wallpaperlauncher.cpp
src/workspace/: workspace.cpp  workspacemodel.cpp  workspacemodel.h
src/xsettings/: xresource.cpp  xsettings.cpp
tests/test_effect_glass/: main.cpp
tools/: CMakeLists.txt
tools/treeland-inspector/: CMakeLists.txt  README.md  main.cpp
waylib/: CMakeLists.txt
(+108 files in other folders)
